--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 #background_image {
-    background-image: url("../images/bg2.jpg");
+    background-image: url("../images/bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
